fix: stop mid-turn queue drain rows from poisoning session metrics restore
A prompt queued while a turn was in flight and then drained by
drainQueuedCommands was stamped promptSource:typed in the transcript
(inheriting the turn opener's prompt identity) but never opens its own
metrics turn. After a restart, readMetricTurnIds counted it as a
coverage obligation while restore() could never measure it, so
complete() stayed false forever and the built-in HUD silently dropped
the whole TTFT/steps/cache-hit segment.

Three layers:
- drain rows now carry MessageOrigin.SYSTEM (the value previously had
  readers but no producer)
- stampMessage strips promptSource/origin for SYSTEM-origin user rows,
  same exclusion tool_result and meta rows already get
- readMetricTurnIds skips promptSource rows chained onto a tool_result
  parent, which self-heals transcripts written before this fix

Also pins the unset-image-model captioning behavior (the router must
switch from captioning to forwarding the original image block by
reference once the live image-model setting reads null).